# haqumei

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.ja.md  README.md
.github/workflows/: ccpp.yaml  docs.yml  rust.yml
haqumei/: .gitignore  Cargo.toml  build.rs  compiled_dictionary.sha256  dictionary  dictionary.sha256  dictionary.tar.zst.sha256  hook.c  redirect.c  redirect.h  redirect_cpp.cpp  wrapper.h
haqumei-bench/: Cargo.toml
haqumei-bench/pyopenjtalk/: pyopenjtalk-bench.py  pyproject.toml
haqumei-bench/pyopenjtalk-plus/: pyopenjtalk-plus-bench.py  pyproject.toml
haqumei-bench/scripts/: pyopenjtalk-bench.py  pyproject.toml
haqumei-bench/src/: main.rs
haqumei-cli/: Cargo.toml  README.ja.md  README.md
haqumei-cli/src/: main.rs
haqumei-dict-tool/: Cargo.toml
haqumei-dict-tool/src/: main.rs
haqumei-eval/: .gitignore  Cargo.toml  build.rs
haqumei-eval/src/: main.rs
haqumei-python/: Cargo.toml  haqumei.pyi  main.py  pyproject.toml
haqumei-python/src/: lib.rs
haqumei/examples/: advanced_usage.rs  basic_usage.rs  parallel_processing.rs
haqumei/src/: data.rs  errors.rs  features.rs  lib.rs  macros.rs  main.rs  nani_predict.rs  open_jtalk.rs  postprocess.rs  utils.rs  word_phoneme.rs
haqumei/src/open_jtalk/: dictionary.rs  jp_common.rs  mapping.rs  mapping_utills.rs  mecab.rs  model.rs  njd.rs  tests.rs
haqumei/src/postprocess/: utils.rs
haqumei/tests/: haqumei_tests.rs  pyopenjtalk_compat.rs  test_g2p.rs
resources/: Rohan4600_transcript_utf8.txt  waganeko.txt
src/: CMakeLists.txt
src/jpcommon/: jpcommon.c  jpcommon.h  jpcommon_label.c
src/mecab/src/: context_id.cpp  dictionary.cpp  dictionary_compiler.cpp  feature_index.cpp  mecab.cpp
src/mecab2njd/: mecab2njd.c
src/njd/: njd_node.c
src/njd2jpcommon/: njd2jpcommon.c
src/njd_set_accent_phrase/: njd_set_accent_phrase.c
src/njd_set_accent_type/: njd_set_accent_type.c
src/njd_set_digit/: njd_set_digit.c
src/njd_set_unvoiced_vowel/: njd_set_unvoiced_vowel.c
