[workspace]
resolver = "3"
members = [
    "haqumei",
    "haqumei-bench",
    "haqumei-dict-tool",
    "haqumei-eval",
    "haqumei-python",
]

[workspace.dependencies]
arc-swap = "1.8.2"
csv = "1.4.0"
dirs = "6.0.0"
fs4 = { version = "0.13.1", features = ["sync"] }
glob = "0.3.3"
hex = "0.4.3"
libc = "0.2.183"
log = "0.4.29"
moka = { version = "0.12.14", features = ["sync"] }
ndarray = "0.17.2"
ort = "=2.0.0-rc.11"
phf = { version = "0.13.1", features = ["macros"] }
pyo3 = { version = "0.28.2", features = ["auto-initialize"] }
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.13.2", features = ["blocking"] }
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.27.0"
thiserror = "2.0.18"
unicode-normalization = "0.1.25"
vibrato-rkyv = { version = "0.7.5" }
walkdir = "2.5.0"
zstd = "0.13.3"
