[workspace]
resolver = "3"
members = [
    "haqumei",
    "haqumei-bench",
    "haqumei-cli",
    "haqumei-dict-tool",
    "haqumei-eval",
    "haqumei-python",
]

[workspace.dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
csv = "1.4.0"
digest-io = "0.1.0"
dirs = "6.0.0"
env_logger = "0.11.10"
fs4 = { version = "0.13.1", features = ["sync"] }
glob = "0.3.3"
hex = "0.4.3"
libc = "0.2.184"
log = "0.4.29"
moka = { version = "0.12.15", features = ["sync"] }
ndarray = "0.17.2"
ort = "=2.0.0-rc.11"
phf = { version = "0.13.1", features = ["macros"] }
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tar = "0.4.45"
tempfile = "3.27.0"
thiserror = "2.0.18"
unicode-normalization = "0.1.25"
vibrato-rkyv = { version = "0.7.7" }
walkdir = "2.5.0"
zstd = "0.13.3"
