[package]
name = "haqumei-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for the Haqumei G2P (Grapheme-to-Phoneme) engine."
readme = "README.md"
repository = "https://github.com/o24s/haqumei"
license = "Apache-2.0"
keywords = ["japanese", "g2p", "phoneme", "nlp"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
haqumei = { version = "0.3.0", features = ["serde"] }
clap.workspace = true
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true