[package]
name = "haqumei-eval"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[dependencies]
csv.workspace = true
haqumei = { path = "../haqumei", features = ["embed-dictionary"] }
pyo3.workspace = true
rayon.workspace = true
regex.workspace = true

[build-dependencies]
pyo3-build-config = "0.28.2"
