[package]
name = "haqumei-eval"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[dependencies]
csv.workspace = true
haqumei = { path = "../haqumei" }
rayon.workspace = true
regex.workspace = true
similar = "2.7.0"

[build-dependencies]
hex.workspace = true
reqwest.workspace = true
sha2.workspace = true
tempfile.workspace = true
