[package]
name = "haqumei-eval"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[dependencies]
csv.workspace = true
haqumei = { path = "../haqumei" }
rayon.workspace = true
regex.workspace = true
similar = "3.0.0"

[build-dependencies]
digest-io.workspace = true
hex.workspace = true
reqwest.workspace = true
sha2.workspace = true
tempfile.workspace = true
