[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "haqumei"
version = "0.1.0"
description = "A Japanese Grapheme-to-Phoneme (G2P) library."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "pytest>=9.0.2",
]
