[package]
name = "haqumei"
version = "0.1.0"
edition = "2024"
authors = ["stellanomia <fulmlumo@gmail.com>"]
description = "Haqumei is a Japanese Grapheme-to-Phoneme (G2P) library implemented in Rust."
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/stellanomia/haqumei"
repository = "https://github.com/stellanomia/haqumei"
keywords = ["japanese", "g2p", "phoneme", "nlp"]
categories = ["text-processing", "parsing"]
include = [
    "src",
    "build.rs",
    "redirect.c",
    "redirect.h",
    "wrapper.h",
    "yomi_model",
    "dictionary",
    "vendor/open_jtalk/src",
    "dictionary.tar.zst",
    "dictionary.sha256",
    "dictionary.tar.zst.sha256",
    "compiled_dictionary.sha256",
    "tests/"
]

[features]
default = ["embed-dictionary"]
embed-dictionary = []

[dependencies]
arc-swap.workspace = true
dirs.workspace = true
hex.workspace = true
libc.workspace = true
log.workspace = true
moka.workspace = true
ndarray.workspace = true
ort.workspace = true
phf.workspace = true
rayon.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
vibrato-rkyv.workspace = true
walkdir.workspace = true
zstd.workspace = true


[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.56"
glob = "0.3.3"
hex.workspace = true
walkdir.workspace = true
sha2.workspace = true
tar.workspace = true
zstd.workspace = true
