[package]
name = "haqumei"
version = "0.3.1"
edition = "2024"
authors = ["o24s <fulmlumo@gmail.com>"]
description = "Haqumei is a Japanese Grapheme-to-Phoneme (G2P) library implemented in Rust."
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/o24s/haqumei"
repository = "https://github.com/o24s/haqumei"
keywords = ["japanese", "g2p", "phoneme", "nlp"]
categories = ["text-processing", "parsing"]
include = [
    "src/*",
    "build.rs",
    "redirect.c",
    "redirect_cpp.cpp",
    "redirect.h",
    "wrapper.h",
    "yomi_model/**",
    "vendor/open_jtalk/src/bin/**",
    "vendor/open_jtalk/src/jpcommon/**",
    "vendor/open_jtalk/src/mecab/**",
    "vendor/open_jtalk/src/mecab2njd/**",
    "vendor/open_jtalk/src/njd/**",
    "vendor/open_jtalk/src/njd2jpcommon/**",
    "vendor/open_jtalk/src/njd_set_accent_phrase/**",
    "vendor/open_jtalk/src/njd_set_accent_type/**",
    "vendor/open_jtalk/src/njd_set_digit/**",
    "vendor/open_jtalk/src/njd_set_long_vowel/**",
    "vendor/open_jtalk/src/njd_set_pronunciation/**",
    "vendor/open_jtalk/src/njd_set_unvoiced_vowel/**",
    "vendor/open_jtalk/src/text2mecab/**",
]

[features]
default = ["embed-dictionary", "download-dictionary"]
embed-dictionary = []
build-dictionary = []
download-dictionary = ["dep:reqwest", "dep:tempfile"]
serde = ["dep:serde"]

[dependencies]
arc-swap.workspace = true
crossbeam-channel.workspace = true
dirs.workspace = true
fs4.workspace = true
hex.workspace = true
libc.workspace = true
log.workspace = true
moka.workspace = true
ndarray.workspace = true
ort.workspace = true
phf.workspace = true
rayon.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
vibrato-rkyv.workspace = true
walkdir.workspace = true
zstd.workspace = true

serde = { workspace = true, optional = true }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.61"
digest-io.workspace = true
dirs.workspace = true
glob.workspace = true
hex.workspace = true
walkdir.workspace = true
sha2.workspace = true
tar.workspace = true
zstd.workspace = true

reqwest = { workspace = true, features = ["blocking"], optional = true }
tempfile = { workspace = true, optional = true }
